# Football-prediction-model

./: .gitignore  FBrefIDFetch.py  LICENSE  README.md  app.py  data_fetch.py  gui.py  pyproject.toml  requirements.txt  simulation.py
src/football_prediction/: __init__.py  backtest.py  cli.py  config.py  features.py  model.py  prediction.py  probabilities.py
src/football_prediction/data/: __init__.py  football_data.py  loader.py  process.py  schema.py  sync.py
tests/: helpers.py  test_backtest.py  test_cli.py  test_data_processing.py  test_features.py  test_football_data.py  test_model.py  test_prediction.py  test_probabilities.py  test_simulation.py
tests/fixtures/statsbomb/data/: competitions.json
tests/fixtures/statsbomb/data/events/: 1001.json  1002.json  1003.json
tests/fixtures/statsbomb/data/matches/2/: 27.json
