[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "football-prediction"
version = "0.1.0"
description = "Leakage-safe Poisson football prediction using StatsBomb Open Data"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2,<3.0",
    "pyarrow>=17,<22",
    "scikit-learn>=1.3,<1.8",
    "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[project.scripts]
football-prediction = "football_prediction.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
#keep pytest's temporary files inside this project. Avoids Windows temp permission issues.
addopts = "-q -p no:cacheprovider --basetemp=.pytest_temp"
testpaths = ["tests"]
pythonpath = ["src"]
