[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "football-prediction"
version = "0.1.0"
description = "Leakage-safe Poisson football prediction using StatsBomb and football-data.org"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=17,<22",
    "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[project.scripts]
football-prediction = "football_prediction.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
#keep pytest's temporary files inside this project. Avoids Windows temp permission issues.
addopts = "-q -p no:cacheprovider --basetemp=.pytest_temp"
testpaths = ["tests"]
pythonpath = ["src"]
